--- a/dashboard.ini
+++ b/dashboard.ini
@@ -4,4 +4,4 @@ master_url = "cluster-master.example.gov:43000"
 [slave_monitor]
 ; Regex used for abbreviating the labels on slave hosts -- the regex is applied to the full host name and the first
 ; matching group is extracted and used. The default is to extract the last numerical sequence before the port number.
-host_abbreviation_regex = "(\d+)[\D]*:\d+$"
+host_abbreviation_regex = "(\\\\d+)[\\\\D]*:\\\\d+$"
