--- a/dashboard.ini
+++ b/dashboard.ini
@@ -5,3 +5,5 @@ master_url = "cluster-master.example.gov:43000"
 ; Regex used for abbreviating the labels on slave hosts -- the regex is applied to the full host name and the first
 ; matching group is extracted and used. The default is to extract the last numerical sequence before the port number.
 host_abbreviation_regex = "(\\\\d+)[\\\\D]*:\\\\d+$"
+
+repo_name_regex = "/([^/]+)/?$"
