--- a/slave_monitor2/package.json
+++ b/slave_monitor2/package.json
@@ -16,11 +16,13 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "expose-loader": "^0.7.3",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "d3": "^4.8.0",
+    "d3": "<4",
+    "phaser-ce": "^2.7.9",
     "pixi.js": "^4.5.1"
   }
 }
